--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="8g2tsx8MewLi6sS2wLuzWxzpgY0hCwRlNyXCHZNvozc" />
     <title>Will Cook - Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Asap:700|News+Cycle:700" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" type="text/css">
