Basic site layed out

--- a/index.html
+++ b/index.html
@@ -1,21 +1,228 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="8g2tsx8MewLi6sS2wLuzWxzpgY0hCwRlNyXCHZNvozc" />
+    <!-- <meta name="description" content=""> -->
+    <!-- <meta name="author" content=""> -->
     <title>Will Cook - Developer</title>
-    <link href="https://fonts.googleapis.com/css?family=Asap:700|News+Cycle:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Khula:600,800" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="js/main.js"></script>
 
+    <!-- Favicon -->
   </head>
   <body>
-    <center>
-      <h1 id="title">Site Coming Soon...</h1>
-      <h4>in the meantime</h4>
-      <a href="mailto:hello@doubleucook.com">email Will here</a>
-      <h5>hello (at) doubleucook.com</h5>
-    </center>
+    <div class="container">
+      <div class="nav">
+        <h1 class="navName">Will Cook</h1>
+        <ul>
+          <!-- <h2 class="navHello">Hello</h2> -->
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li>
+            <div class="navContacts">
+              <a href="#" target="_blank"><h5>LinkedIn</h5></a><br>
+              <a href="#"><h5>email</h5></a><br>
+              <a href="https://github.com/willcook4" target="_blank"><h5>GitHub</h5></a>
+              <!-- <a href="#"><h5>Twitter</h5></a> -->
+            </div>
+          </li>
+        </ul>
+        <!-- <h1 class="navName">Will Cook</h1> -->
+      </div>
+
+      <div class="row">
+        <div class="four columns">
+        </div>
+        <div class="eight columns">
+          <div class="main">
+            <div class="about" id="about">
+              <div>
+                <h4 class="devTitle">Hello my name is Will Cook</h4>
+                <h4 class="devTitle2">I am a web developer</h4>
+              </div>
+              <p>I am a problem solver, striving to make everyday better. My work history illustrates my proven ability to use various learned tools to support, research, implement, evaluate and market a product or service. I work positively in a team environment with a diverse range of people.</p>
+              <img src="images/_MG_0621.jpg">
+              <div class="background">
+                <h4>Background in</h4>
+                <ul>
+                  <li>Industrial Design</li>
+                  <li>Installation and running of technical equipment</li>
+                  <li>Residential and Commercial Construction</li>
+                  <li>Fabrication</li>
+                  <li>Project Management</li>
+                  <li>Tutoring and teaching</li>
+                <ul>
+              </div>
+              <div class="why">
+                <h4>Why Development?</h4>
+                <p>After studying Industrial design and applying my knowledge of planning, prototyping, researching and developing an idea to a tanigle product I looked at other ways that I could do the same but in a different way.  I tried out a number of online courses and after comming accross General Assembly. I did a short course and then a 12-week intensive bootcamp in Web Development. After that I was hooked, solving problems in a digital way.</p>
+              </div>
+              <div class="skills">
+                <h4>Skills</h4><p>(Confindence in)</p>
+                <div class="slider">
+                  <label for="javascript">JavaScript :</label>
+                  <input name="javascript" type="range" min="0" max="100" value="75"/>
+                </div>
+                <br>
+                <div class="slider">
+                  <label for="ruby">Ruby :</label>
+                  <input name="ruby" type="range" min="0" max="100" value="65"/>
+                </div>
+                <br>
+                <div class="slider">
+                  <label for="css">CSS/SCSS/SASS :</label>
+                  <input name="css" type="range" min="0" max="100" value="65"/>
+                </div>
+                <br>
+                <div class="slider">
+                  <label for="git">git and GitHub :</label>
+                  <input name="git" type="range" min="0" max="100" value="65"/>
+                </div>
+                <br>
+                <div class="slider">
+                  <label for="mean">MEAN Stack :</label>
+                  <input name="mean" type="range" min="0" max="100" value="65"/>
+                </div>
+                <br>
+                <div class="slider">
+                  <label for="project">Project Management :</label>
+                  <input name="project" type="range" min="0" max="100" value="65"/>
+                </div>
+                <br>
+                <div class="slider">
+                  <label for="deployment">Deployment :</label>
+                  <input name="deployment" type="range" min="0" max="100" value="65"/>
+                </div>
+                <br>
+                <div class="slider">
+                  <label for="speak">Public Speaking :</label>
+                  <input name="speak" type="range" min="0" max="100" value="65"/>
+                </div>
+              </div>
+              <div class="what">
+                <h4>What am I working on now?</h4>
+                <ul>
+                  <li>I have a website for a family member that I’m building.</li>
+                  <li>I’m going back over my General Assembly projects and updating them to JavaScript ES6.</li>
+                  <li>I’m regularaly attending meetups to become more engaged with the tech community in London.</li>
+                  <li>I’m interested in learning Angular2 and React and I’m doing online tutorials to learn more about these exciting technologies.</li>
+                </ul>
+              </div>
+            </div>
+    <!-- Projects -->
+            <div class="projects" id="projects">
+              <div class="projectShape">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 10" preserveAspectRatio="none">
+                  <polygon points="0,100 100,100 0,0"/>
+                </svg>
+              </div>
+              <h4 class="projectsTitle">Projects</h4>
+              <div class="projectBg">
+                <div class="project">
+                  <h5>Bike London</h5>
+                  <div class="project-image .u-max-full-width">
+                    <img src="images/screenshot.png">
+                  </div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <div class="projectLinks">
+                    <a class="button" href="#">See the project</a>
+                    <a class="button">See the code</a>
+                  </div>
+                </div>
+              </div>
+              <div class="projectBg">
+                <div class="project">
+                  <h5>Bike London</h5>
+                  <div class="project-image .u-max-full-width">
+                    <img src="images/bikeLondon.png" alt="Biking Game in London traffic">
+                  </div>
+                  <p>This project was about bringing together the skills we had learnt after a couple of weeks at GA in one individual project. Aim of the project was to include separate HTML / CSS / JavaScript files, host a working game somewhere on the internet. Technology Used: Javascript, jQuery, HMTL5, CSS3, GitHub, Heroku, git</p>
+                  <div class="projectLinks">
+                    <a class="button" href="https://willbikelondon.herokuapp.com/" target="_blank">Try the game</a>
+                    <a class="button" href="https://github.com/willcook4/BikeLondon" target="_blank">See the code</a>
+                  </div>
+                </div>
+              </div>
+              <div class="projectBg">
+                <div class="project">
+                  <h5>Bike London</h5>
+                  <div class="project-image .u-max-full-width">
+                    <img src="images/screenshot.png">
+                  </div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <div class="projectLinks">
+                    <a class="button" href="#">See the project</a>
+                    <a class="button">See the code</a>
+                  </div>
+                </div>
+              </div>
+              <div class="projectBg">
+                <div class="project">
+                  <h5>Bike London</h5>
+                  <div class="project-image .u-max-full-width">
+                    <img src="images/screenshot.png">
+                  </div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <div class="projectLinks">
+                    <a class="button" href="#">See the project</a>
+                    <a class="button">See the code</a>
+                  </div>
+                </div>
+              </div>
+              <div class="projectBg">
+                <div class="project">
+                  <h5>Bike London</h5>
+                  <div class="project-image .u-max-full-width">
+                    <img src="images/screenshot.png">
+                  </div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <div class="projectLinks">
+                    <a class="button" href="#">See the project</a>
+                    <a class="button">See the code</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="contacts" id="contact">
+              <div class="contactShape">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 102" preserveAspectRatio="none" class="bottom">
+                  <path d="M0 0 L50 100 L100 0 Z"></path>
+                </svg>
+                <h4>Contact Me</h4>
+                <p>I’m currently looking for oppourtunities. Drop me a message or connect via one of the following…</p>
+                <div class="contactGroup">
+                  <div class="contactOption">
+                    <a href="#" target="_blank">
+                      <div class="contactIcon"><img class="emailIcon" src="./images/email.png" alt="email icon"></div>
+                      <h6>Email</h6>
+                    </a>
+                  </div>
+                  <div class="contactOption">
+                    <a href="#" target="_blank">
+                      <div class="contactIcon"><img src="./images/Lin.png" alt="LinkedIn icon"></div>
+                      <h6>LinkedIn</h6>
+                    </a>
+                  </div>
+                  <div class="contactOption">
+                    <a href="https://github.com/willcook4" target="_blank">
+                      <div class="contactIcon"><img src="./images/GitHub-Mark-LightGrey-64px.png" alt="GitHub icon"></div>
+                      <h6>GitHub</h6>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
