Fixed missing image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h4 class="devTitle2">I am a web developer</h4>
               </div>
               <p>I am a problem solver, striving to make everyday better. My work history illustrates my proven ability to use various learned tools to support, research, implement, evaluate and market a product or service. I work positively in a team environment with a diverse range of people.</p>
-              <img src="images/_MG_0621.jpg">
+              <img src="images/Will.jpg" alt="Will Cook">
               <div class="background">
                 <h4>Background in</h4>
                 <ul>
