fixed broken link

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                   </div>
                   <div class="projectLinks">
                     <a class="button" href="http://heist-advisors.herokuapp.com/">See the project</a>
-                    <a class="button codeBtn">See the code</a>
+                    <a class="button codeBtn" href="https://github.com/willcook4/WDI_LDN_PROJECT3">See the code</a>
                   </div>
                 </div>
               </div>
