--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                           <li>Devise<br> - Authentication</li>
                           <li>Bootstrap v4</li>
                           <li>Select2 - <br> JavaScript library</li>
-                          <li>Amazon Web Services - S3</li>
+                          <li>Amazon Web Services</li>
                           <li>Heroku</li>
                           <li>PostgreSQL db</li>
                           <!-- <li class="hidden"></li> -->
@@ -300,7 +300,7 @@
                           <li>Cyberduck</li>
                           <li>Devise<br> - Authentication</li>
                           <li>Bootstrap v4</li>
-                          <li>Amazon Web Services - S3</li>
+                          <li>Amazon Web Services</li>
                           <!-- <li class="hidden"></li> -->
                           <!-- <li class="hidden"></li> -->
                         </ul>
