tuned the css exported from sass watch

--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
-<!-- To work on...
-- Links
-- In progress banner
-- hr rule tag background color
--->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="8g2tsx8MewLi6sS2wLuzWxzpgY0hCwRlNyXCHZNvozc" />
-    <!-- <meta name="description" content=""> -->
-    <!-- <meta name="author" content=""> -->
+    <meta name="description" content="Will Cook is a full stack web developer, striving to make everyday better.">
+    <meta name="author" content="Will Cook">
     <title>Will Cook - Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Khula:600,800" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.min.css" rel="stylesheet" type="text/css">
 
     <!-- Favicon -->
   </head>
@@ -67,7 +61,7 @@
               </div>
               <div class="why">
                 <h4>Why Development?</h4>
-                <p>After studying Industrial design and applying my knowledge of planning, prototyping, researching and developing an idea to a tanigle product I looked at other ways that I could do the same but in a different way.  I tried out a number of online courses and after comming accross General Assembly. I did a short course and then a 12-week intensive bootcamp in Web Development. After that I was hooked, solving problems in a digital way.</p>
+                <p>After studying Industrial design and applying my knowledge of planning, prototyping, researching and developing an idea into a tanigle product I looked at other ways that I could do the same but in a different way.  I tried out a number of online courses and after comming accross General Assembly. I did a short course and then a 12-week intensive bootcamp in Web Development. After that I was hooked, solving problems in a digital way.</p>
               </div>
               <div class="skills">
                 <h4>Skills</h4><p>(Confindence in)</p>
@@ -135,7 +129,7 @@
                   <div class="project-image .u-max-full-width">
                     <img src="images/HeistAdvisors.png">
                   </div>
-                  <p>This site was buit in a week long team sprint at General Assembly. The project was an exploration into the creation and consuming of API's. Simply put we created a robbery assistant app. You select a city in the world, possible heist locations are presented to you with likely odds of success and rewards. Choose the one you want and select rob the place. The game then plays the odds. Will you get to your waiting plane at the nearest airport before the police catch you?<br><br>
+                  <p>This site was built in a week long team sprint at General Assembly. The project was an exploration into the creation and consuming of API's. Simply put we created a robbery assistant app. You select a city in the world, possible heist locations are presented to you with likely odds of success and rewards. Choose the one you want and select rob the place. The game then plays the odds. Will you get to your waiting plane at the nearest airport before the police catch you?<br><br>
                   As a team we set about building and testing an MVP(Minimum Viable Product). This came about through a basic test app. Pulling data from the Google Maps API to give a start and end location.<br><br>
                   This data was improved with the inclusion of the SITA API which gave the nearest Airport. Avoiding false positive results from google (e.g. Airport taxi companies were listed as Airports by Google Maps Places API).
                   <br><br>
